# lsd_slam

./: .gitignore  .qglviewer.xml  CMakeLists.txt  README.md  TEST.bat  doxyfile
cmake/: FindAssimp.cmake  FindEigen3.cmake  FindFLTK.cmake  FindG2O.cmake  FindOpenCV.cmake  FindQGLViewer.cmake  Findlibtiff.cmake
data/: cube.ply  identity.txt
demos/: CMakeLists.txt  ReconstructionDemo.cpp
lsd_slam_core/src/: CMakeLists.txt  LiveSLAMApplication.cpp  LiveSLAMApplication.hpp  LiveSLAMWrapper.cpp  LiveSLAMWrapper.h  LiveSLAMWrapper.hpp  SlamSystem.cpp  SlamSystem.h  SlamSystem.hpp  Win32Compatibility.cpp  Win32Compatibility.hpp
lsd_slam_core/src/CameraModel/: CMakeLists.txt  CameraModel.cpp  CameraModel.hpp  Constants.hpp  OmniCameraModel.cpp  OmniCameraModel.hpp  ProjCameraModel.cpp  ProjCameraModel.hpp
lsd_slam_core/src/DataStructures/: CMakeLists.txt  Frame.cpp  Frame.h  Frame.hpp  FrameMemory.cpp  FramePoseStruct.cpp  FramePoseStruct.h  FramePoseStruct.hpp
lsd_slam_core/src/DepthEstimation/: CMakeLists.txt  DepthMap.cpp  DepthMap.h  DepthMap.hpp  DepthMapInitSettings.hpp  DepthMapLineStereo.cpp  DepthMapLineStereo.hpp  DepthMapOmniStereo.cpp  DepthMapOmniStereo.hpp  DepthMapPixelHypothesis.cpp  DepthMapPixelHypothesis.hpp
lsd_slam_core/src/GlobalMapping/: CMakeLists.txt  KeyFrameGraph.cpp  KeyFrameGraph.h  KeyFrameGraph.hpp  TrackableKeyFrameSearch.cpp  TrackableKeyFrameSearch.hpp  g2oTypeSim3Sophus.cpp  g2oTypeSim3Sophus.hpp
lsd_slam_core/src/IOWrapper/: CMakeLists.txt  DirectoryImageStream.cpp  DirectoryImageStream.hpp  InputImageStream.cpp  InputImageStream.hpp  NotifyBuffer.hpp  OpenCVImageStream.cpp  OpenCVImageStream.hpp  Output3DWrapper.hpp  Timestamp.cpp  Timestamp.hpp  ViewerOutput3DWrapper.cpp  ViewerOutput3DWrapper.hpp
lsd_slam_core/src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
lsd_slam_core/src/Tracking/: CMakeLists.txt  LGSX.hpp  Relocalizer.cpp  Relocalizer.hpp  SE3Tracker.cpp  SE3Tracker.h  SE3Tracker.hpp  Sim3Tracker.cpp  Sim3Tracker.h  Sim3Tracker.hpp  TrackingReference.cpp  TrackingReference.hpp
lsd_slam_core/src/util/: CMakeLists.txt  CameraMotion.cpp  CameraMotion.hpp  Constants.cpp  Constants.hpp  DenseDepthTrackerSettings.cpp  DenseDepthTrackerSettings.hpp  ImgProc.cpp  ImgProc.hpp  IndexThreadReduce.hpp  KahanVal.cpp  ModelLoader.cpp  ModelLoader.hpp  Raycast.cpp  Raycast.hpp  RunningStats.cpp  RunningStats.hpp  SophusUtil.cpp  SophusUtil.hpp  Undistorter.cpp  Undistorter.hpp  VectorTypes.hpp  globalFuncs.cpp  globalFuncs.h  globalFuncs.hpp  ply.h  plyfile.c  settings.cpp  settings.hpp
lsd_slam_omni/src/: CMakeLists.txt  CameraModel.cpp  CameraModel.hpp  Constants.hpp  OmniCameraModel.cpp  OmniCameraModel.hpp  ProjCameraModel.cpp  ProjCameraModel.hpp  SE3TrackerOmni.cpp  SE3TrackerOmni.hpp  Sim3TrackerOmni.cpp  Sim3TrackerOmni.hpp  VectorTypes.cpp  VectorTypes.hpp
lsd_slam_viewer/src/: CMakeLists.txt  ImageViewer.cpp  ImageViewer.hpp  KeyFrameDisplay.cpp  KeyFrameDisplay.h  KeyFrameDisplay.hpp  KeyFrameGraphDisplay.cpp  KeyFrameGraphDisplay.h  KeyFrameGraphDisplay.hpp  PointCloudViewer.cpp  PointCloudViewer.h  PointCloudViewer.hpp  keyframeGraphMsg.h  keyframeMsg.h  keyframeMsg.hpp  settings.cpp  settings.hpp
src/: CMakeLists.txt
src/CameraModel/: CMakeLists.txt  CameraModel.cpp  CameraModel.hpp  ConvertDepthMap.cpp  ConvertDepthMap.hpp  OmniCameraModel.cpp  OmniCameraModel.hpp  ProjCameraModel.cpp  ProjCameraModel.hpp
src/DataStructures/: CMakeLists.txt  Frame.cpp  Frame.hpp  FramePoseStruct.hpp
src/DepthEstimation/: CMakeLists.txt  DepthMap.cpp  DepthMap.hpp  DepthMapDebugDefines.hpp  DepthMapDebugImages.cpp  DepthMapDebugImages.hpp  DepthMapInitMode.hpp  DepthMapOmni.cpp  DepthMapOmni.hpp  DepthMapPixelHypothesis.cpp  DepthMapPixelHypothesis.hpp
src/GlobalMapping/: CMakeLists.txt  FabMap.cpp  FabMap.hpp  KeyFrameGraph.cpp  KeyFrameGraph.hpp  TrackableKeyFrameSearch.cpp  TrackableKeyFrameSearch.hpp  g2oTypeSim3Sophus.cpp  g2oTypeSim3Sophus.hpp
src/IOWrapper/: CMakeLists.txt  DirectoryImageStream.cpp  InputImageStream.cpp  NotifyBuffer.hpp  OpenCVImageStream.cpp  OpenCVImageStream.hpp  Output3DWrapper.hpp  Timestamp.cpp  Timestamp.hpp  TimestampedObject.hpp  ViewerOutput3DWrapper.cpp  ViewerOutput3DWrapper.hpp
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
src/System/: CMakeLists.txt  LiveSLAMWrapper.cpp  LiveSLAMWrapper.hpp  SlamSystem.cpp  SlamSystem.hpp
src/Tracking/: CMakeLists.txt  LGSX.hpp  Relocalizer.cpp  Relocalizer.hpp  SE3Tracker.cpp  SE3Tracker.hpp  Sim3Tracker.cpp  Sim3Tracker.hpp  TrackingReference.cpp  TrackingReference.hpp
src/Util/: CMakeLists.txt  Constants.cpp  ImgProc.cpp  KahanVal.hpp  ModelLoader.cpp  PolylineModelMaker.cpp  PolylineModelMaker.hpp  SophusUtil.cpp  SophusUtil.hpp  Undistorter.cpp  VectorTypes.cpp  VectorTypes.hpp  globalFuncs.cpp  globalFuncs.hpp  settings.cpp  settings.hpp
src/Viewer/: CMakeLists.txt  KeyFrameDisplay.cpp  KeyFrameDisplay.hpp  KeyFrameGraphDisplay.cpp  KeyFrameGraphDisplay.hpp  PointCloudViewer.cpp  PointCloudViewer.hpp  keyframeMsg.cpp  keyframeMsg.hpp  settings.cpp  settings.hpp
tests/: CMakeLists.txt  MakeRaycastedImage.cpp  MakeRaycastedVideo.cpp  RenderAndTestSE3Tracking.cpp  RenderAndTestSim3Tracking.cpp  TestCamModels.cpp  TestConvertDepthMaps.cpp  TestDepthMapGeneration.cpp  TestDepthMapPropagation.cpp  TestImageViewer.cpp  TestMakePaddedEpipolarLineOmni.cpp  TestOmniStereo.cpp  TestOmniStereoWholeIm.cpp  TestProjStereo.cpp  TestProjStereoWholeIm.cpp  TestSE3Tracking.cpp  TestStereoMatching.cpp  TestTraceEpipolarLine.cpp
tests/src/: CMakeLists.txt  MakeRaycastedImage.cpp  MakeRaycastedVideo.cpp  RenderAndTestSE3Tracking.cpp  RenderAndTestSim3Tracking.cpp  TestDepthMapGeneration.cpp  TestOmniStereo.cpp  TestOmniStereoWholeIm.cpp  TestProjStereo.cpp  TestProjStereoWholeIm.cpp  TestRayIntersection.cpp  TestSE3Tracking.cpp
