add_library(lsd_slam_Util
	EigenCoreInclude.hpp
	globalFuncs.cpp
	globalFuncs.hpp
	ImgProc.cpp
	ImgProc.hpp
	IndexThreadReduce.hpp
	KahanVal.cpp
	KahanVal.hpp
	ModelLoader.cpp
	ModelLoader.hpp
	settings.cpp
	settings.hpp
	SophusUtil.cpp
	SophusUtil.hpp
	Undistorter.cpp
	Undistorter.hpp
	VectorTypes.cpp
	VectorTypes.hpp
)

