add_library(lsd_slam_IOWrapper
	ImageDisplay.hpp
	InputImageStream.hpp
	InputImageStream.cpp
	NotifyBuffer.hpp
	OpenCV/ImageDisplay_OpenCV.cpp
	Output3DWrapper.hpp
	ViewerOutput3DWrapper.hpp
	ViewerOutput3DWrapper.cpp
	Timestamp.cpp
	Timestamp.hpp
	TimestampedObject.hpp
	OpenCVImageStream.hpp
	OpenCVImageStream.cpp
	DirectoryImageStream.cpp
	DirectoryImageStream.hpp
)

