add_library(lsd_slam_Util
	Constants.hpp
	Constants.cpp
	EigenCoreInclude.hpp
	globalFuncs.cpp
	globalFuncs.hpp
	IndexThreadReduce.hpp
	settings.cpp
	settings.hpp
	SophusUtil.cpp
	SophusUtil.hpp
	Undistorter.cpp
	Undistorter.hpp
	Raycast.cpp
	Raycast.hpp
	RunningStats.cpp
	RunningStats.hpp
	DenseDepthTrackerSettings.cpp
	DenseDepthTrackerSettings.hpp
	ModelLoader.cpp
	ModelLoader.hpp
	CameraMotion.cpp
	CameraMotion.hpp
	ImgProc.cpp
	ImgProc.hpp
	VectorTypes.cpp
	VectorTypes.hpp
	KahanVal.cpp
	KahanVal.hpp
)

target_link_libraries(lsd_slam_Util
	${ASSIMP_LIBRARY}
)

